[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tm-visionone"
version = "0.1.0"
description = "Python SDK for Trend Micro Vision One"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Sai Kumar Gandhi", email = "saikumargandhi33@gmail.com" }
]
keywords = ["trendmicro", "visionone", "xdr", "security", "sdk", "ioc", "trend micro"]
classifiers = [
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "requests>=2.31.0",
]

[tool.setuptools]
# Ensures only your package directory is included
packages = ["tm_visionone"]

[project.urls]
"Homepage" = "https://github.com/saikumargandhi/tm-visionone"
